fix: remove before element and only use z-index

--- a/src/form-message.scss
+++ b/src/form-message.scss
@@ -20,6 +20,7 @@ $block: #{$fd-namespace}-form-message;
   line-height: normal;
   color: var(--sapTextColor);
   white-space: pre-line !important;
+  box-shadow: var(--sapContent_Shadow1);
 
   @include fd-rtl() {
     right: 0;
